--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'css/home.css'%}">
 	<link rel="stylesheet" type="text/css" href="{%static 'css/game/inicio.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/categorias.css'%}">
+  <link rel="stylesheet" type="text/css" href="{%static 'css/game/resultado.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/modo.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/preguntas.css'%}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
