--- a/PregunChaco_App/templates/Home/home.html
+++ b/PregunChaco_App/templates/Home/home.html
@@ -21,7 +21,7 @@
   <div class="Container">
     <div class="Box Hijo1">
       <h1 class="Titulo1">PregunChaco </h1>
-      <p class="Texto1">Esta es una Páguina web desarrollada por alumnos del informatorio del año 2021 <br> ¡Espero que lo disfruten!</p>
+      <p class="Texto1">Esta es una página web desarrollada por alumnos del informatorio del año 2021 <br> ¡Espero que lo disfruten!</p>
       <img src="{% static 'img/home/carpincho.svg' %}" alt="carpincho" class="ImagenCarpincho">
     </div>
     <div class="Box Hijo2">
