--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -11,8 +11,7 @@
     <div class="self-center grid shadow-2xl p-10 rounded-3xl">
       <h1 class="col-span-4 font-bold text-5xl text-bold">¿Cómo Jugar?</h1>
       <p class="col-span-4 mt-4 text-2xl">
-        Selecciona el modo de juego, puedes elegir las categorías
-        puedes elegir las categorias o puedes dejar que el azar te elija una. <br>
+        Selecciona el modo de juego, puedes elegir las categorias o puedes dejar que el azar te elija una. <br>
         Las categorias de preguntas son: Ciencia y Educación, Geografia, Historia
         Entrenamiento, Deportes, Economia, Cultura y Arte.<br>
         El tipo de juego es trivial y puede tener una o más respuestas correctas,
