--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -35,6 +35,15 @@
 
       {% if user.is_authenticated %}
       <div class="contenedor contenedor2">
+        <a href=""> <!-- link redes -->
+          <img src="" class="logoR"> <!-- Logo Redes -->
+        </a>
+        <a href=""> <!-- link redes -->
+          <img src="" class="logoR"> <!-- Logo Redes -->
+        </a>
+        <a href=""> <!-- link redes -->
+          <img src="" class="logoR"> <!-- Logo Redes -->
+        </a>
         <span class="mr-2 uppercase font-bold">
           {{ user.username }}
         </span>
