--- a/PregunChaco_App/static/css/home.css
+++ b/PregunChaco_App/static/css/home.css
@@ -155,3 +155,9 @@
 	padding-left: 1.5%;
 	margin: 3px;
 }
+
+.pregunchaco{
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  color: #1830FF;
+}
