--- a/PregunChaco_App/templates/usuarios/register.html
+++ b/PregunChaco_App/templates/usuarios/register.html
@@ -13,7 +13,7 @@
 
 {% else %}
 <!-- ######### Inicio Registro #########-->
-<div class="container mx-auto mt-4 register-form p-6 rounded-3xl shadow-2xl w-2/5">
+<div class="container mx-auto my-4 register-form p-6 rounded-3xl shadow-2xl w-2/5 animate__animated animate__fadeIn">
   <a href="{% url 'home' %}" class="text-blue-400">Volver al Inicio</a>
   <h1 class="text-3xl mt-6 mb-6 font-bold">Registrarse</h1>
   <form action="" method="POST">
