--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -14,36 +14,41 @@
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/modo.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/preguntas.css'%}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
   <!-- Icono de la pagina -->
-  <link rel="icon" type="image.png" href="{%static 'img/base/g9.png'%} ">
+  <link rel="icon" type="image.png" href="{%static 'img/base/carpincho-mate.svg'%} ">
   <title>{% block titulo %} PregunChaco {% endblock titulo %}</title>
 
 </head>
 <body>
-  <div class="contenedorPadre" >
+  <div class="contenedorPadre content-center bg-white border-b shadow-md">
       <div class="contenedor contenedor1"  >
           <a href="{% url 'home' %}">
-           <img src="{% static 'img/base/g9.png' %}" class="logo">
+           <img src="{%static 'img/base/carpincho-mate.svg'%}" class="logo ml-2">
           </a>
           <a href="{% url 'home' %}">
-           <div class="tytle Nombre"> 
+           <h1 
+           class="ml-4 text-4xl font-bold font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-400"> 
               PregunChaco
-           </div>
+           </h1>
           </a>
+     </div>
+
+     <div class="flex mt-2 mr-12">
+      <a href="https://www.facebook.com/PregunChaco-108526878224013" target="_blank"> <!-- link redes -->
+        <img src="{% static 'img/social/facebook.svg' %}" class="logoR"> <!-- Logo Redes -->
+      </a>
+      <a href="https://twitter.com/pregun_chaco" target="_blank"> <!-- link redes -->
+        <img src="{% static 'img/social/twitter.svg' %}" class="logoR mx-2"> <!-- Logo Redes -->
+      </a>
+      <a href="https://www.instagram.com/pregun_chaco/" target="_blank"> <!-- link redes -->
+        <img src="{% static 'img/social/instagram.svg' %}" class="logoR"> <!-- Logo Redes -->
+      </a>
      </div>
 
       {% if user.is_authenticated %}
       <div class="contenedor contenedor2">
-        <a href=""> <!-- link redes -->
-          <img src="" class="logoR"> <!-- Logo Redes -->
-        </a>
-        <a href=""> <!-- link redes -->
-          <img src="" class="logoR"> <!-- Logo Redes -->
-        </a>
-        <a href=""> <!-- link redes -->
-          <img src="" class="logoR"> <!-- Logo Redes -->
-        </a>
         <span class="mr-2 uppercase font-bold">
           {{ user.username }}
         </span>
