--- a/PregunChaco_App/templates/Home/home.html
+++ b/PregunChaco_App/templates/Home/home.html
@@ -25,14 +25,16 @@
       <img src="{% static 'img/home/carpincho.svg' %}" alt="carpincho" class="w-full">
     </div>
     <div class="self-center text-center grid">
-      <div class="p-6 rounded-3xl px-20 py-24 shadow-2xl">
+      <div class="p-6 rounded-3xl px-20 py-24 shadow-2xl animate__animated animate__bounceInRight">
             <h2 class="font-semibold text-2xl mb-5">¡Bienvenido a PregunChaco!</h2>
             <p class="text-xl mb-10">Ingresa a tu cuenta para disfrutar de este increíble juego,
           consigue las mejores marcas, compite y aprende más sobre esta hermosa
           provincia.</p>
             {% if user.is_authenticated %}
-            <a class="cursor-pointer p-6 font-bold text-2xl text-white rounded-xl bg-gradient-to-r
-           from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg" href="{% url 'inicio' %}" >¡Comienza Ahora!</a>
+            <a class="cursor-pointer p-5 font-bold text-xl text-white rounded-full bg-gradient-to-r
+            from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg" href="{% url 'inicio' %}" id='comenzar'>
+            ¡Comienza Ahora!
+            </a>
             {% else %}
               <!-- ######### Inicio Login #########-->
               <div>
@@ -59,7 +61,6 @@
                     class="cursor-pointer p-2 mt-4 text-white rounded-full bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
                     Registrarse
                   </a>
-                <a href="#" class="mt-4 col-span-2">¿Has olvidado la contraseña?</a></span>
               </div>
               <!-- ######### Fin Login #########-->
             {% endif %}
