--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -8,9 +8,9 @@
   {% block contenido %}
   <div class="container grid grid-cols-2 mx-auto container_inicio">
 
-    <div class="self-center grid shadow-2xl p-10 rounded-3xl">
+    <div class="p-2 self-center grid shadow-2xl p-10 rounded-3xl animate__animated animate__bounceInLeft">
       <h1 class="col-span-4 font-bold text-5xl text-bold">¿Cómo Jugar?</h1>
-      <p class="col-span-4 mt-4 text-2xl">
+      <p class="col-span-4 mt-4 text-xl">
         Selecciona el modo de juego, puedes elegir las categorias o puedes dejar que el azar te elija una. <br>
         Las categorias de preguntas son: Ciencia y Educación, Geografia, Historia
         Entrenamiento, Deportes, Economia, Cultura y Arte.<br>
@@ -22,10 +22,10 @@
       </a>
     </div>
 
-    <div class="grid grid-cols-4 content-center">
+    <div class="grid grid-cols-4 content-center animate__animated animate__fadeIn">
       <img src="{% static 'img/game/personaje1.svg' %}" alt="Jugar" class="col-span-4 mx-auto w-1/2">
       <a href="{% url 'modo' %}"
-          class="animate-pulse text-center shadow-lg col-start-2 col-span-2 font-bold text-6xl p-3 text-white rounded-xl bg-blue-400 hover:bg-blue-500">
+          class="text-center shadow-lg col-start-2 col-span-2 font-bold text-6xl p-3 text-white rounded-xl bg-blue-400 hover:bg-blue-500">
           Jugar
       </a>
     </div>
