--- a/PregunChaco_App/templates/game/preguntas.html
+++ b/PregunChaco_App/templates/game/preguntas.html
@@ -3,35 +3,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  {% block titulo %}PregunChaco{% endblock titulo %}
+  {% block titulo %} PregunChaco | Juego {% endblock titulo %}
 </head>
 <body>
 	{% block contenido %}
 
     {% if pregunta is None %}
-      <div class="container1 text-center">
+      <div class="container1 text-center mt-4">
         <div class="text-xl">
           <h3>
             Respondiste todas las preguntas. Mira la tabla de posiciones
             <a href="{% url 'pregunta:tabla' %}" class="text-white bg-blue-400 rounded px-1">aquí</a>.
           </h3>
         </div>
+
+
+        <!-- inicio Puntuación de la partida -->
+        <div class="text-xl text-center mt-2">
+
+          {% if JugadorUser.puntaje_total == None %}
+            <h3 class="font-bold text-xl">Puntuación total de esta partida</h3>
+            <p class='font-bold text-5xl text-blue-400'>0</p>
+            <!-- <img src="{%static 'img/base/carpincho-mate.svg'%}" alt="completado" class="mx-auto w-1/4 mt-10"> -->
+          {% else %}
+            <h3 class="font-bold text-xl">Puntuación total de esta partida</h3>
+            <p class='font-bold text-5xl text-blue-400'>{{JugadorUser.puntaje_total}}</p>
+            <!-- <img src="{%static 'img/base/carpincho-mate.svg'%}" alt="completado" class="mx-auto w-1/4 mt-10"> -->
+          {% endif %}
+
+        </div>
+        <!-- fin Puntuación de la partida -->
       </div>
-
-    <!-- inicio Puntuación de la partida -->
-    <div class="text-xl text-center mt-2">
-
-      {% if JugadorUser.puntaje_total == None %}
-        <h3>Puntuación total de esta partida</h3>
-        <p>0</p>
-      {% else %}
-        <h3>Puntuación total de esta partida</h3>
-        <p class='font-bold'>{{JugadorUser.puntaje_total}}</p>
-      {% endif %}
-
-    </div>
-    <!-- fin Puntuación de la partida -->
-
     {% else %}
 
     <div class="container2">
@@ -63,7 +65,7 @@
             </h3> <br>
           </div>
           <h1 class="Resp">    Respuestas:</h1>
-         <form method="POST" id="form-respuesta">
+         <form method="POST" id="form-respuesta" class="animate__animated animate__bounceInRight">
           {% csrf_token %}
             <input type="hidden" name='pregunta_pk' value="{{pregunta.pk}}" class="Quiz">
             {% for opcion in pregunta.opcion.all %}
