--- a/PregunChaco_App/templates/game/tablaMejores.html
+++ b/PregunChaco_App/templates/game/tablaMejores.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 
-<title>{% block titulo %} Mejores Jugadores | PregunChaco {% endblock titulo %}</title>
+
+  {% block titulo %} PregunChaco | Mejores Jugadores {% endblock titulo %}
+
 
 {%block contenido%}
 <h1 class="text-center my-4"> 
