--- a/PregunChaco_App/static/css/game/resultado.css
+++ b/PregunChaco_App/static/css/game/resultado.css
@@ -42,10 +42,9 @@
 	bottom:12%;
 }
 .check2{
-	text-indent: 25px;
 	font-size: x-large;
 	font-family: Quicksand;
-	font-weight: bold;
+	/* font-weight: bold; */
 	border-radius: 30px;
 	border-color: black;
 	border-width: thin;
@@ -58,7 +57,7 @@
 	text-indent: 25px;
 	font-size: x-large;
 	font-family: Quicksand;
-	font-weight: bold;
+	/* font-weight: bold; */
 }
 
 .Res2{
@@ -69,7 +68,7 @@
 	text-indent: 25px;
 	font-size: x-large;
 	font-family: Quicksand;
-	font-weight: bold;
+	/* font-weight: bold; */
 	border-radius: 30px;
 	border-color: black;
 	border-width: thin;
@@ -83,7 +82,7 @@
 	text-indent: 25px;
 	font-size: x-large;
 	font-family: Quicksand;
-	font-weight: bold;
+	/* font-weight: bold; */
 	border-radius: 30px;
 	border-color: black;
 	border-width: thin;
