--- a/PregunChaco_App/templates/Home/home.html
+++ b/PregunChaco_App/templates/Home/home.html
@@ -20,7 +20,7 @@
 
   <div class="container grid grid-cols-2 mx-auto">
     <div class="p-2 text-center">
-      <h1 class="font-bold text-6xl text-bold">PregunChaco </h1>
+      <h1 class="font-bold text-6xl text-bold animate__animated animate__pulse">PregunChaco </h1>
       <p class="text-xl mt-4">Esta es una página web desarrollada por alumnos del informatorio del año 2021 <br> ¡Espero que lo disfruten!</p>
       <img src="{% static 'img/home/carpincho.svg' %}" alt="carpincho" class="w-full">
     </div>
