--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -29,20 +29,20 @@
           </a>
           <a href="{% url 'home' %}">
            <h1 
-           class="ml-4 text-4xl font-bold font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-400"> 
+           class="zoomx1 ml-4 text-4xl font-bold font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-400"> 
               PregunChaco
            </h1>
           </a>
      </div>
 
      <div class="flex mt-2 mr-20">
-      <a href="https://www.facebook.com/PregunChaco-108526878224013" target="_blank"> <!-- link redes -->
+      <a href="https://www.facebook.com/PregunChaco-108526878224013" target="_blank" class="zoom"> <!-- link redes -->
         <img src="{% static 'img/social/facebook.svg' %}" class="logoR"> <!-- Logo Redes -->
       </a>
-      <a href="https://twitter.com/pregun_chaco" target="_blank"> <!-- link redes -->
+      <a href="https://twitter.com/pregun_chaco" target="_blank" class="zoom"> <!-- link redes -->
         <img src="{% static 'img/social/twitter.svg' %}" class="logoR mx-2"> <!-- Logo Redes -->
       </a>
-      <a href="https://www.instagram.com/pregun_chaco/" target="_blank"> <!-- link redes -->
+      <a href="https://www.instagram.com/pregun_chaco/" target="_blank" class="zoom"> <!-- link redes -->
         <img src="{% static 'img/social/instagram.svg' %}" class="logoR"> <!-- Logo Redes -->
       </a>
      </div>
@@ -53,10 +53,10 @@
           {{ user.username }}
         </span>
         <a href="{% url 'pregunta:tabla' %}">
-          <img src="{% static 'img/Logo_Ranking.png' %}" class="logoR">
+          <img src="{% static 'img/Logo_Ranking.png' %}" class="logoR zoomx1">
         </a>
         <a href="{% url 'logout' %}">
-          <img src="{% static 'img/salir.png' %}" class="logoS" >
+          <img src="{% static 'img/salir.png' %}" class="logoS zoomx1" >
         </a>
       </div>
       {% endif %}
