--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -17,15 +17,15 @@
         El tipo de juego es trivial y puede tener una o más respuestas correctas,
         solo tienes que estar atento!
       </p>
-      <a href="{% url 'home' %}" class="text-center text-xl p-3 mt-4 text-white rounded-xl bg-blue-400 shadow-lg hover:bg-blue-500">
-        Volver al Inicio
+      <a href="{% url 'home' %}" class="text-center text-xl p-3 px-8 mt-4 text-white rounded-full shadow-lg bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+        Ir al inicio
       </a>
     </div>
 
     <div class="grid grid-cols-4 content-center animate__animated animate__fadeIn">
       <img src="{% static 'img/game/personaje1.svg' %}" alt="Jugar" class="col-span-4 mx-auto w-1/2">
       <a href="{% url 'modo' %}"
-          class="text-center shadow-lg col-start-2 col-span-2 font-bold text-6xl p-3 text-white rounded-xl bg-blue-400 hover:bg-blue-500">
+          class="text-center shadow-lg col-start-2 col-span-2 font-bold text-4xl py-3 pb-4 text-white rounded-full bg-green-600 hover:bg-green-700">
           Jugar
       </a>
     </div>
