--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -6,6 +6,7 @@
 <body>
 
   {% block contenido %}
+  {% if user.is_authenticated %}
   <div class="container grid grid-cols-2 mx-auto container_inicio">
 
     <div class="p-2 self-center grid shadow-2xl p-10 rounded-3xl animate__animated animate__bounceInLeft">
@@ -30,7 +31,16 @@
       </a>
     </div>
   </div>
+
+{% else %}
+
+<p class="text-center mt-4">
+  No tienes permisos para ver esta sección!
+  <a href="{% url 'home' %}" class="text-blue-500">Inicia Sesión</a>
+</p>
+
+{% endif %}
   
-  {% endblock contenido %}
+{% endblock contenido %}
 </body>
 </html>
