--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -6,7 +6,7 @@
 </head>
 
 {% block contenido %}
-
+{% if user.is_authenticated %}
 <div class="text-center">
   <h1 class="font-bold text-5xl mt-3 mb-5 ">Elige un Modo</h1>
   <a href="{% url 'inicio' %}" class="bg-blue-400 hover:bg-blue-500 text-xl p-3 text-white rounded-xl bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
@@ -28,5 +28,14 @@
   	</div>
 
 </div>
+
+{% else %}
+
+<p class="text-center mt-4">
+  No tienes permisos para ver esta sección!
+  <a href="{% url 'home' %}" class="text-blue-500">Inicia Sesión</a>
+</p>
+
+{% endif %}
 
 {% endblock contenido %}
