--- a/PregunChaco_App/templates/game/tablaMejores.html
+++ b/PregunChaco_App/templates/game/tablaMejores.html
@@ -7,6 +7,7 @@
 
 
 {%block contenido%}
+{% if user.is_authenticated %}
 <div class="mt-10">
   <h1 class="text-center my-4"> 
     <span class="text-2xl font-bold animate__animated animate__fadeIn">
@@ -52,6 +53,15 @@
     </li>
   </ul>
 </div>
+
+{% else %}
+
+<p class="text-center mt-4">
+  No tienes permisos para ver esta sección!
+  <a href="{% url 'home' %}" class="text-blue-500">Inicia Sesión</a>
+</p>
+
+{% endif %}
 
 
 
