--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -35,7 +35,7 @@
           </a>
      </div>
 
-     <div class="flex mt-2 mr-2">
+     <div class="flex mt-2">
       <a href="https://www.facebook.com/PregunChaco-108526878224013" target="_blank" class="zoom"> <!-- link redes -->
         <img src="{% static 'img/social/facebook.svg' %}" class="logoR"> <!-- Logo Redes -->
       </a>
