--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -13,13 +13,13 @@
     Volver
   </a>
 
-  	<div class="Box2">
-  		<div class="Modo Modo1 animate__animated animate__flipInX">
+  	<div class="Box2 grid grid-cols-1 justify-items-center md:flex">
+  		<div class="mt-4 md:mt-0 w-56 md:w-1/4 Modo Modo1 animate__animated animate__flipInX">
   			<a href="{% url 'pregunta:jugar' Cat  %}">
   				<img src="{% static 'img/game/Modo/cat_personajes_01.svg' %}">
   			</a>
   		</div>
-  		<div class="Modo Modo2 animate__animated animate__flipInX"> 
+  		<div class="mt-6 w-56 md:w-1/4 Modo Modo2 animate__animated animate__flipInX"> 
   			<a href="{% url 'pregunta:categoria' %}">
   				<img src="{% static 'img/game/Modo/cat_personajes_02.svg' %}">
   			</a>
