--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-  <div class="contenedorPadre content-center bg-white border-b shadow-md">
+  <div class="contenedorPadre content-center bg-white border-b shadow-md mx-auto justify-center grid md:justify-between md:grid-cols-3 lg:flex">
       <div class="contenedor contenedor1"  >
           <a href="{% url 'home' %}">
            <img src="{%static 'img/base/carpincho-mate.svg'%}" class="logo ml-2">
@@ -35,7 +35,7 @@
           </a>
      </div>
 
-     <div class="flex mt-2">
+     <div class="flex mt-2 justify-center">
       <a href="https://www.facebook.com/PregunChaco-108526878224013" target="_blank" class="zoom"> <!-- link redes -->
         <img src="{% static 'img/social/facebook.svg' %}" class="logoR"> <!-- Logo Redes -->
       </a>
@@ -76,11 +76,11 @@
  	{%endblock contenido%}
   </div>
 
-   <footer class="bg-gray-300 h-24 flow-root">
-     <div class="grid grid-cols-3 justify-items-center mt-4">
-       <img src="{% static 'img/base/footer/ministerio.svg' %}" alt="" class="w-96">
-       <img src="{% static 'img/base/footer/chaco.svg' %}" alt="" class="w-96">
-       <img src="{% static 'img/base/footer/informatorio.svg'%}" alt="" class="w-80">
+   <footer class="bg-gray-300 mt-5 h-auto sm:h-24 flow-root">
+     <div class="grid grid-cols-1 grid-rows-3 sm:grid-rows-1 sm:grid-cols-3 justify-items-center mt-4">
+       <img src="{% static 'img/base/footer/ministerio.svg' %}" alt="" class="row-start-3 sm:row-start-1 sm:w-96">
+       <img src="{% static 'img/base/footer/chaco.svg' %}" alt="" class="ml-12 w-80 sm:w-96">
+       <img src="{% static 'img/base/footer/informatorio.svg'%}" alt="" class="mx-auto w-3/5 sm:w-80">
      </div>
    </footer>
 
