--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -7,11 +7,11 @@
 
   {% block contenido %}
   {% if user.is_authenticated %}
-  <div class="container grid grid-cols-2 mx-auto container_inicio">
+  <div class="container grid grid-cols-1 md:grid-cols-2 mx-auto container_inicio">
 
     <div class="p-2 self-center grid shadow-2xl p-10 rounded-3xl animate__animated animate__bounceInLeft">
-      <h1 class="col-span-4 font-bold text-5xl text-bold">¿Cómo Jugar?</h1>
-      <p class="col-span-4 mt-4 text-xl">
+      <h1 class="col-span-4 font-bold text-2xl md:text-5xl text-bold">¿Cómo Jugar?</h1>
+      <p class="col-span-4 mt-4 text-lg md:text-xl">
         Selecciona el modo de juego, puedes elegir las categorias o puedes dejar que el azar te elija una. <br>
         Las categorias de preguntas son: Ciencia y Educación, Geografia, Historia
         Entrenamiento, Deportes, Economia, Cultura y Arte.<br>
