--- a/PregunChaco_App/templates/game/preguntas.html
+++ b/PregunChaco_App/templates/game/preguntas.html
@@ -38,7 +38,7 @@
 
     <div class="container2">
 
-      <div class="Sub Sub1">
+      <div class="Sub Sub1 hidden md:block">
           <img src="{% static ''%}img/game/categorias/personaje_{{cat}}.svg" class="Imag"> 
           <p class="TextCat TextCat{{cat}}">
               {% if cat == 1 %}
@@ -58,35 +58,37 @@
               {% endif %}
           </p>
       </div>
-        <div class="Sub Sub2">
+        <div class="Sub Sub2 w-full md:w-1/2">
           <div class="Preg shadow-lg">
-           <h3 class="text-2xl">
+           <h3 class="text-xl md:text-2xl">
           {{pregunta.texto}}
             </h3> <br>
           </div>
           <h1 class="Resp text-2xl my-4">    Respuestas:</h1>
-         <form method="POST" id="form-respuesta" class="animate__animated animate__bounceIn">
+        <form method="POST" id="form-respuesta" class="grid">
           {% csrf_token %}
             <input type="hidden" name='pregunta_pk' value="{{pregunta.pk}}" class="Quiz">
             {% for opcion in pregunta.opcion.all %}
-              <label for="choice-{{forloop.counter}}" class="Res">
-                <input type="radio" name="respuesta_pk" value="{{opcion.pk}}" id="choice-{{forloop.counter}}" class="Rad">
-                <span class="check"> {{opcion.texto}} </span>
+              <label for="choice-{{forloop.counter}}" class="Res grid grid-cols-8 animate__animated animate__bounceIn mt-5">
+                <input type="radio" name="respuesta_pk" value="{{opcion.pk}}" id="choice-{{forloop.counter}}" class="Rad col-span-1">
+                <span class="check text-xl col-span-7 text-center"> {{opcion.texto}} </span>
               </label>
               <br>
+
             {% endfor %}
+            <button type="submit" class="BEnviar justify-self-end mt-5">Enviar</button>
               <br>
-             </div>
-            <br>
-             <button type="submit" class="BEnviar">Enviar</button>
+            </div>
+              <br>
 
-          <!-- Inicio alerta de Seleccione una opción -->
-          <div class="row justify-content-center ml-2 p-0" id="alert">
-              <p></p>
-          </div>
-          <!-- fin alerta de Seleccione una opción -->
 
+            <!-- Inicio alerta de Seleccione una opción -->
+            <div class="row justify-content-center ml-2 p-0" id="alert">
+                <p></p>
+            </div>
+            <!-- fin alerta de Seleccione una opción -->
         </form>
+
       </div> 
     </div>
     {% endif %}
