--- a/PregunChaco_App/templates/game/categorias.html
+++ b/PregunChaco_App/templates/game/categorias.html
@@ -14,7 +14,7 @@
 {% block contenido %}
 
 <div class="text-center">
-  <h1 class="font-bold text-5xl m-3 mb-5 ">Elige una categoria</h1>
+  <h1 class="font-bold text-3xl md:text-5xl m-3 mb-5 ">Elige una categoria</h1>
   <a href="{% url 'modo' %}" class="bg-blue-400 hover:bg-blue-500 text-xl p-3 mt-4 text-white rounded-xl bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
     Volver
   </a>
