--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -8,7 +8,7 @@
 {% block contenido %}
 {% if user.is_authenticated %}
 <div class="text-center">
-  <h1 class="font-bold text-5xl mt-3 mb-5 ">Elige un Modo</h1>
+  <h1 class="font-bold text-3xl md:text-5xl mt-3 mb-5">Elige un Modo</h1>
   <a href="{% url 'inicio' %}" class="bg-blue-400 hover:bg-blue-500 text-xl p-3 text-white rounded-xl bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
     Volver
   </a>
