--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -79,7 +79,7 @@
    <footer class="bg-gray-300 mt-5 h-auto sm:h-24 flow-root">
      <div class="grid grid-cols-1 grid-rows-3 sm:grid-rows-1 sm:grid-cols-3 justify-items-center mt-4">
        <img src="{% static 'img/base/footer/ministerio.svg' %}" alt="" class="row-start-3 sm:row-start-1 sm:w-96">
-       <img src="{% static 'img/base/footer/chaco.svg' %}" alt="" class="ml-12 w-80 sm:w-96">
+       <img src="{% static 'img/base/footer/chaco.svg' %}" alt="" class="w-80 sm:w-96">
        <img src="{% static 'img/base/footer/informatorio.svg'%}" alt="" class="mx-auto w-3/5 sm:w-80">
      </div>
    </footer>
