--- a/PregunChaco_App/templates/Home/home.html
+++ b/PregunChaco_App/templates/Home/home.html
@@ -13,7 +13,7 @@
   {% if messages %}
     {% for message in messages %}
     <div class="text-center">
-      <p class="text-2xl p-2 font-bold text-white bg-green-400 w-1/3 mx-auto mt-2 rounded-md">{{ message }}</p>
+      <p class="text-2xl p-2 font-bold text-white bg-green-400 md:w-1/3 mx-auto mt-2 rounded-md">{{ message }}</p>
     </div>
     {% endfor %}
   {% endif %}
@@ -26,13 +26,13 @@
     </div>
 
     <div class="self-center text-center grid">
-      <div class="p-6 rounded-3xl px-20 pb-20 sm:py-24 shadow-2xl animate__animated animate__bounceInRight">
+      <div class="p-6 rounded-3xl sm:px-20 sm:pb-20 sm:py-24 shadow-2xl animate__animated animate__bounceInRight">
             <h2 class="font-semibold text-2xl mb-5">¡Bienvenido a PregunChaco!</h2>
             <p class="text-xl mb-10">Ingresa a tu cuenta para disfrutar de este increíble juego,
           consigue las mejores marcas, compite y aprende más sobre esta hermosa
           provincia.</p>
             {% if user.is_authenticated %}
-            <a class="cursor-pointer p-5 font-bold text-xl text-white rounded-full bg-gradient-to-r
+            <a class="cursor-pointer p-5 font-bold text-sm sm:text-xl text-white rounded-full bg-gradient-to-r
             from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg" href="{% url 'inicio' %}" id='comenzar'>
             ¡Comienza Ahora!
             </a>
@@ -55,7 +55,7 @@
                     class='border-b col-span-2 p-3 mt-2 mb-10 focus:outline-none'>
 
                   <button type="submit"
-                    class="p-2 mt-4 text-white rounded-full  bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
+                    class="p-2 mt-4 text-white rounded-full bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
                     Ingresar
                   </button>
                   <a href="{% url 'usuarios:register' %}"
